--- a/Jogo da nave JS/jogoDaNave.css
+++ b/Jogo da nave JS/jogoDaNave.css
@@ -6,9 +6,9 @@ body{
     background-color: gainsboro;
 }
 .navJog{
-    width: 120px;
-    height: 120px;
-    background-image: url("nave.gif");
+    width: 60px;
+    height: 60px;
+    background-image: url("nave.png");
     position: absolute;
 }
 .telaMsg{
@@ -19,4 +19,28 @@ body{
     width: 720px;
     height: 621px;
     display: none;
+}
+#medidorPlaneta{
+    border: 2px solid #000;
+    width: 300px;
+    height: 20px;
+    background-color: #fff;
+}
+#barraPlaneta{
+    width: 300px;
+    height: 20px;
+    background-color: #55f;
+}
+.tiroJog{
+    width: 6px;
+    height: 6px;
+    background-color: #000;
+    border-radius: 6px;
+    position: absolute;
+}
+.bomba{
+    width: 40px;
+    height: 40px;
+    background-image: url("bomba.png");
+    position: absolute;
 }
